@@ -64,6 +64,7 @@ S3method( "maxValue", "maxim" )
 S3method( "nIter", "default" )
 S3method( "nObs", "maxLik" )
 S3method( "nParam", "maxim" )
+S3method( "print", "maxim" )
 S3method( "print", "maxLik" )
 S3method( "print", "summary.maxim" )
 S3method( "print", "summary.maxLik" )
