@@ -7,6 +7,8 @@ https://github.com/arne-henningsen/maxLik
 
      CHANGES IN VERSION 1.5-3 (2020-07-26)
 
+* 'print' and 'show' methods for 'maxim' objects
+
 * stdEr returns NA-vector when Hessian missing
 
 * the preferred way to query number of obs is 'stats4::nobs',
